--- a/cart.css
+++ b/cart.css
@@ -1,161 +1,201 @@
-body {
-  margin: 0;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-p,
-span {
-  margin: 0;
-}
-
-a {
-  color: black;
-}
-
-img {
-  display: block;
-  width: 80%;
-  height: 80px;
-  margin: auto;
-}
-
-.cart {
-  width: 80%;
-  margin: auto;
-  padding: 30px;
-}
-
-.cart ul {
-  background-color: whitesmoke;
-  padding: 30px;
-  margin-bottom: 50px;
-  border: whitesmoke solid 1px;
-  border-radius: 5px;
-  font-size: 13px;
-  font-weight: 300;
-}
-
-.cart ul :first-child {
-  color: limegreen;
-}
-
-table {
-  border-top: solid 1.5px black;
-  border-collapse: collapse;
+.basketdiv {
   width: 100%;
-  font-size: 14px;
+  border-top: 1px solid #e0e0e0;
+  float: left;
+  font-size: 0.9375em;
+  margin-bottom: 20px;
+}
+  .basketdiv .row.head {
+      border-bottom: 2px solid #888;
+      box-sizing: border-box;
+      background-color: #f4f4f4;
+      font-weight: 500;
+  }
+  .basketdiv .data {
+      border-bottom: 1px dashed #888;
+      box-sizing: border-box;
+      cursor: pointer;
+      float: left;
+      width: 100%;
+  }
+  .basketdiv .data .empty{
+      text-align: center;
+      padding: 12px 0;
+  }
+  .basketdiv .row.head .subdiv {
+      background-color: #f4f4f4;
+  }
+  .basketdiv .row > .subdiv {
+      display: block;
+      float: left;
+  }
+  .basketdiv .row > .subdiv:nth-child(1) {
+      width: 50%;
+  }
+  .basketdiv .row > .subdiv:nth-child(2) {
+      width: 40%;
+  }
+  .basketdiv .row > .subdiv:nth-child(3) {
+      width: 10%;
+  }
+  .basketdiv2 .row > .subdiv:nth-child(1) {
+      width: 60%;
+  }
+  .basketdiv2 .row > .subdiv:nth-child(2) {
+      width: 40%;
+  }
+  .basketdiv .row > div > div {
+      display: block;
+      float: left;
+      text-align: center;
+      margin: 0;
+      padding: 12px 0;
+  }
+  .basketdiv .row.data > div > div {
+      height: 60px;
+      line-height: 60px;
+  }
+      .basketdiv .data .num .updown {
+          color: #0075ff;
+          font-size: 2em;
+          letter-spacing: -5px;
+      }
+      .basketdiv .check {
+          width: 10%;
+      }
+  .basketdiv .check input[type=checkbox] {
+      transform: scale(1.5);
+  }
+  .basketdiv .img{
+      width: 20%;
+  }
+  .basketdiv .pname{
+      width: 70%;
+  }
+  .basketdiv2 .pname {
+      width: 80%;
+  }
+  .basketdiv .basketprice {
+      width: 33%;
+  }
+  .basketdiv .num {
+      width: 33%;
+    min-width: 105px;
+  }
+  .basketdiv .sum {
+      width: 34%;
+    max-width: 80px;
+      color: #0000aa;
+  }
+  .basketdiv .point {
+      width: 50%;
+  }
+  .basketdiv2 .basketprice {
+      width: 25%;
+  }
+
+  .basketdiv2 .num {
+      width: 25%;
+  }
+
+  .basketdiv2 .sum {
+      width: 25%;
+      color: #0000aa;
+  }
+
+  .basketdiv2 .point {
+      width: 25%;
+  }
+  .basketdiv .basketcmd{
+      width: 100%;
+  }
+  .basketdiv .data .pname {
+      text-align: left !important;
+    line-height: 1.2 !important;
+  }
+  .basketdiv .data .price, .basketdiv .data .sum, .basketdiv .data .point {
+      text-align: right;
+  }
+  .baseform > tbody > tr > td:first-child {
+      width: 100px;
+  }
+
+.buttongroup {
+  padding: 11px 0;
+  margin: 50px 0;
+}
+.narrowbuttongroup{
+  margin: 15px 0;
+}
+  .buttongroup.center {
+      text-align: center;
+  }
+  .buttongroup input[type=text], .buttongroup input[type=password] {
+      height: 30px;
+  }
+  .buttongroup button, .buttongroup a {
+      margin-right: 5px;
+  }
+      .buttongroup button:last-child, .buttongroup a:last-child {
+          margin-right: 0;
+      }
+
+  .abutton, .abutton:link, .abutton:visited, .abutton:active, input[type=button] {
+      background-color: #383838;
+      border: 1px solid #888888;
+      color: #ffffff;
+      cursor: pointer;
+      letter-spacing: -1px;
+      padding: 3px 5px;
+      margin: 2px 3px;
+      width: auto;
+      word-break: keep-all;
+      border-radius: 5px;
+      text-decoration: none;
+      font-size: 0.9375em;
+  }
+
+.abutton-alt {
+  background-color: #d3e2c6;
 }
 
-thead {
+.red {
+  color:#b00;
+}
+.blue {
+color: #0075ff;
+}
+.basketrowcmd, .sumcount, .summoney{
+text-align: right;
+margin-bottom: 10px;
+}
+.sumcount, .summoney{
+font-size: 1.25em;
+  font-weight: bold;
+}
+.buttongroup{
+text-align: center;
+}
+.buttongroup a{
+text-decoration: none;
+}
+.cmd a, .cmd span {
+  padding: 12px 30px;
+  box-sizing: border-box;
+  margin-top: 10px;
+  font-size: 1.2em;
+  color: #000;
+  background-color: #f4f4f4;
+  border: 1px solid #e0e0e0;
   text-align: center;
-  font-weight: bold;
+}
+.cmd.small a, .cmd.small span {
+  padding: 6px 20px;
+  font-size: 0.8125em;
 }
 
-tbody {
-  font-size: 12px;
-}
-
-td {
-  padding: 15px 0px;
-  border-bottom: 1px solid lightgrey;
-}
-
-.cart__list__detail :nth-child(3) {
-  vertical-align: top;
-}
-
-.cart__list__detail :nth-child(3) a {
-  font-size: 12px;
-}
-
-.cart__list__detail :nth-child(3) p {
-  margin-top: 6px;
-  font-weight: bold;
-}
-
-.cart__list__smartstore {
-  font-size: 12px;
-  color: gray;
-}
-
-.cart__list__option {
-  vertical-align: top;
-  padding: 20px;
-}
-
-.cart__list__option p {
-  margin-bottom: 25px;
-  position: relative;
-}
-
-.cart__list__option p::after {
-  content: "";
-  width: 90%;
-  height: 1px;
-  background-color: lightgrey;
-  left: 0px;
-  top: 25px;
-  position: absolute;
-}
-
-.cart__list__optionbtn {
-  background-color: white;
-  font-size: 10px;
-  border: lightgrey solid 1px;
-  padding: 7px;
-}
-
-.cart__list__detail :nth-child(4),
-.cart__list__detail :nth-child(5),
-.cart__list__detail :nth-child(6) {
-  border-left: 2px solid whitesmoke;
-}
-
-.cart__list__detail :nth-child(5),
-.cart__list__detail :nth-child(6) {
-  text-align: center;
-}
-
-.cart__list__detail :nth-child(5) button {
-  background-color: limegreen;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  padding: 4px 8px;
-  font-size: 12px;
-  margin-top: 5px;
-}
-
-.price {
-  font-weight: bold;
-}
-
-.cart__mainbtns {
-  width: 420px;
-  height: 200px;
-  padding-top: 40px;
-  display: block;
-  margin: auto;
-}
-
-.cart__bigorderbtn {
-  width: 200px;
-  height: 50px;
-  font-size: 16px;
-  margin: auto;
-  border-radius: 5px;
-}
-
-.cart__bigorderbtn.left {
-  background-color: white;
-  border: 1px lightgray solid;
-}
-
-.cart__bigorderbtn.right {
-  background-color: limegreen;
-  color: white;
-  border: none;
+.orderform .p_num {
+  text-align: right;
+  width: 40px;
+  font-size: 1em;
 }
